remove useless code due to trying to solve the centering input on IOS

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,8 +7,6 @@
 
 html, body {
   height: 100%;
-  -webkit-overflow-scrolling : touch !important;
-  overflow: auto !important;
 }
 
 html {
